--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
     <div class="wrap">
       <div class="content">
         <p class="slider">click! -------------></p>
-        <a href="main.html">
-          <video class="video" src="KakaoTalk_20240421_115819755.mp4" autoplay loop muted>이 브라우저에서 지원하지 않는 영상입니다.</video>
+        <a href="/hongimyoonhanlee/main.html">
+          <video class="video" src="/hongimyoonhanlee/KakaoTalk_20240421_115819755.mp4" autoplay loop muted>이 브라우저에서 지원하지 않는 영상입니다.</video>
         </a>
       </div>
     </div>
