--- a/main.html
+++ b/main.html
@@ -149,7 +149,7 @@
         <h3>인천광역시 중구 중산동 1873-14</h3>
         <div class="">
             <span>✨:</span>
-            <a href="https://link.coupang.com/re/SHARESDPNUL?pageKey=7361053153&itemId=18965078611&vendorItemId=86090876168">
+            <a href="https://www.coupang.com/vp/products/7361053153?itemId=18965078611&vendorItemId=86725583081&landingType=USED_DETAIL">
                 애니빔 5G 무선 미러링 휴대용 미니 빔프로젝터</p>
             </a>
         </div>
