--- a/main.html
+++ b/main.html
@@ -136,7 +136,9 @@
   max-width: 70px;
   cursor: pointer;
 }
- 
+.fontSmall{
+    font-size: 5px;
+} 
 
 </style>
   </head>
@@ -157,6 +159,7 @@
         <div id="imageContent">
             <div>
                 <p>스티커로 사진을 꾸며 보세요!</p>
+                <p class="fontSmall">*pc에서만 가능</p>
             </div>
             <div id="imageContainer">
                 <div class="image-wrapper" id="image1">
